--- a/src/graficUserInterface/About.fxml
+++ b/src/graficUserInterface/About.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.text.Font?>
 
 
-<VBox prefHeight="174.0" prefWidth="307.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/16">
+<VBox prefHeight="174.0" prefWidth="307.0" xmlns:fx="http://javafx.com/fxml" xmlns="http://javafx.com/javafx">
    <children>
       <Label alignment="TOP_LEFT" contentDisplay="TOP" prefHeight="0.0" prefWidth="289.0" text="About:">
          <font>
