--- a/src/graficUserInterface/DepartmentForm.fxml
+++ b/src/graficUserInterface/DepartmentForm.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane prefHeight="146.0" prefWidth="567.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="graficUserInterface.DepartmentFormController">
+<AnchorPane prefHeight="146.0" prefWidth="567.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="graficUserInterface.DepartmentFormController">
    <children>
       <GridPane layoutX="33.0" layoutY="29.0" prefHeight="108.0" prefWidth="482.0" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="20.0">
         <columnConstraints>
